# differential-colors

./: README.md  differential_colors.py  pyproject.toml
src/differential_colors/: __init__.py
