[project]
name = "differential-colors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cjmerzbacher", email = "cjmerzbacher@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
differential-colors = "differential_colors:main"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"

dependencies = [
  "matplotlib>=3.7",
  "seaborn>=0.13",   # optional
]