[project]
name = "differential-colors"
version = "0.1.0"
description = "Differential Bio color utilities for matplotlib & seaborn."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
  "matplotlib>=3.7",
  "seaborn>=0.13",
]

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"